# cisco-nso-restconf

./: .gitignore  README.md  pyproject.toml
cisco_nso_restconf/: client.py  devices.py
examples/client/: client_simple.py
examples/helpers/device/: device_helper_simple.py
tests/: test_client.py
