[tool.poetry]
name = "cisco-nso-restconf"
version = "0.1.0"
description = "A Python library for interacting with the Cisco NSO RESTCONF API"
authors = ["Darren Bono <dbono215@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["RESTCONF", "Cisco", "NSO", "client", "API"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
flake8 = "^7.1.1"
black = "^24.8.0"
mypy = "^1.11.2"
pytest-mock = "^3.14.0"
paramiko = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
