[project]
name = "cisco-nso-restconf"
version = "1.0.3"
description = "A Python client library for interacting with the Cisco NSO RESTCONF API"
readme = "README.md"
authors = [
    {name = "Darren Bono", email = "dbono215@gmail.com"},
]
requires-python = ">=3.8,<4.0"
dependencies = [
    "requests >=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest >=8.3.2",
    "pytest-cov >=5.0.0",
    "ruff >=0.7.4",
    "flake8 >=7.1.1",
    "black >=24.8.0",
    "mypy >=1.11.2",
    "pytest-mock >=3.14.0",
    "paramiko >=3.5.0",
]

[tool.uv]
default-groups = ["dev"]
